2007-05-31  J. Tang  <jtang@tresys.com>

	* libapol/src/util.c (apol_str_to_objclass): Added this function,
	as the complement to apol_objclass_to_str().

	* libapol/src/mls_level.c (apol_mls_level_is_literal),
	  libapol/src/mls_range.c (apol_mls_range_is_literal): Added
	  ability to query if level/range is literal.  This is needed when
	  printing an apol_context_t containing a literal level.

	* libapol: split mls-query.h into mls-query.h, mls_level.h, and
	mls_range.h.  This file was much too large.

2007-05-30  J. Tang  <jtang@tresys.com>

	* libapol/src/mls-query.c (apol_mls_level_create_from_literal)
	(apol_mls_level_convert): The apol_mls_level_t object can now be
	created without relying upon a policy.  Call
	apol_mls_level_convert() to complete its category list.

2007-05-30  J. Mowery  <jmowery@tresys.com>

	* The --regex flag in sesearch now also applies to --class.

2007-05-29  J. Tang  <jtang@tresys.com>

	* ./configure no longer has --enable-sefs flag, for libselinux is
	required to build SETools.  (The kernel does need to have SELinux
	running, though.)  Therefore, libsefs is now always built.

	* apol converted to use the SWIG interface for Tcl.

	* libapol/src/types-relation-analysis.c
	(apol_types_relation_domain): Domain transition table was not
	correctly reset when intermixing calls between
	apol_types_relation_analysis_do() and
	apol_domain_trans_analysis_do().
	
2007-05-22  J. Tang  <jtang@tresys.com>

	* Added infoflow defines to apol.i.  Added apol_file_find_path()
	to apol.i.  They were inadvertently missing from the interface
	file.

2007-05-22  J. Mowery  <jmowery@tresys.com>

	* Renamed apol_permmap_*() to apol_policy_*_permmap() to
	  correctly reflect the fact that the policy owns the permmap.

2007-05-21  J. Mowery  <jmowery@tresys.com>

	* Renamed apol_policy_domain_trans_table_build() and
	  apol_domain_trans_table_reset() to apol_policy_build_domain_trans_table()